kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubedeploy-service
  labels:
    app: kubedeploy
spec:
  selector:
    app: kubedeploy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
