kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubedeploy-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx

  tls:
    - hosts:
        - kubedeploy.local
      secretName: kubedeploy-tls

  rules:
    - host: kubedeploy.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: kubedeploy-service
                port:
                  number: 80
